--- a/package.json
+++ b/package.json
@@ -1,26 +1,1 @@
-{
-  "name": "ai-scanner",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@google/generative-ai": "^0.21.0",
-    "@supabase/supabase-js": "^2.39.7",
-    "lucide-react": "^0.344.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6"
-  }
-}
+{"name": "ai-scanner","private": true,"version": "1.0.0","type": "module","scripts": {"dev": "vite","build": "vite build","preview": "vite preview"},"dependencies": {"@google/generative-ai": "^0.21.0","@google/genai": "^0.4.1","@supabase/supabase-js": "^2.39.7","lucide-react": "^0.344.0","react": "^18.2.0","react-dom": "^18.2.0"},"devDependencies": {"@types/node": "^20.11.24","@types/react": "^18.2.64","@types/react-dom": "^18.2.21","@vitejs/plugin-react": "^4.2.1","typescript": "^5.2.2","vite": "^5.1.6"}}
